[tool.poetry]
name = "blog-app"
version = "0.1.0"
description = ""
authors = ["fbrcode <fabio.bressler@gmail.com>"]
readme = "README.md"
packages = [{include = "blog_app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
